# spark-runner

./: .gitattributes  Cargo.toml  MISSION.md  PROGRESS.json  README.md
.github/workflows/: ci.yml
docs/audit/: 2026-07-17-independent-audit.md
docs/decisions/: ADR-001-rust.md  ADR-002-stdio.md  ADR-003-build-vs-borrow.md  ADR-004-protocol-tolerance.md  ADR-005-single-worker-first.md
docs/evidence/: events.jsonl  run.json
docs/evidence/cp/: CP1.md  CP2.md  CP3.md  CP4.md  CP5.md  CP6.md  CP7.md
protocol/0.142.0/: ClientRequest.json  codex_app_server_protocol.v2.schemas.json  stable.schema.json
protocol/0.142.0/v2/: ThreadForkParams.json  ThreadForkResponse.json  ThreadResumeParams.json  ThreadResumeResponse.json  ThreadStartParams.json  ThreadStartResponse.json  TurnStartParams.json
protocol/0.144.3/: ClientRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
protocol/0.144.3/v2/: ThreadForkParams.json  ThreadStartParams.json  ThreadStartResponse.json  TurnStartParams.json
protocol/0.144.6/: codex_app_server_protocol.v2.schemas.json
src/: api.rs  client.rs  config.rs  journal.rs  jsonl.rs  lib.rs  main.rs  orchestrator.rs  process.rs  state.rs
tests/: app_server.rs  cli.rs  cp3_resilience.rs  cp4_approvals.rs  cp5_journal_recovery.rs  cp6_local_http_sse.rs  cp6_runtime_owner.rs
