[package]
name = "spark-runner"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "spark-runner"
path = "src/main.rs"

[[bin]]
name = "fake_app_server"
path = "src/bin/fake_app_server.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
axum = "0.7"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
